add_library(zikhron_spaced_repetition)
add_library(zikhron::spaced_repetition ALIAS zikhron_spaced_repetition)
target_include_directories(zikhron_spaced_repetition
    PRIVATE
        include/spaced_repetition
    INTERFACE
        include
)
target_sources(zikhron_spaced_repetition
    PRIVATE
        include/spaced_repetition/AsyncTreeWalker.h
        include/spaced_repetition/CardContent.h
        include/spaced_repetition/CardMeta.h
        include/spaced_repetition/DataBase.h
        include/spaced_repetition/ITreeWalker.h
        include/spaced_repetition/Scheduler.h
        include/spaced_repetition/VocableMeta.h
        include/spaced_repetition/srtypes.h
        src/AsyncTreeWalker.cpp
        src/CardMeta.cpp
        src/DataBase.cpp
        src/Node.cpp
        src/Node.h
        src/Path.h
        src/Scheduler.cpp
        src/Tree.cpp
        src/Tree.h
        src/TreeWalker.cpp
        src/TreeWalker.h
        src/VocableMeta.cpp
)
target_link_libraries(zikhron_spaced_repetition
    PUBLIC
        zikhron::annotation
        zikhron::database
        zikhron::dictionary
        zikhron::kocoro
        zikhron::miscellaneous
        zikhron::multimedia
        zikhron::utils
    PRIVATE
        Boost.DI
        spdlog::spdlog
        stdc++exp
        zikhron::warnings
)

set_property(TARGET zikhron_spaced_repetition PROPERTY CXX_STANDARD 23)
target_compile_definitions(zikhron_spaced_repetition PRIVATE spaced_repetition_internal_include=1)
